[package]
name = "async-demo"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "async-demo"
path = "src/main.rs"

[[bin]]
name = "server_test"
path = "src/server_test.rs"

[[bin]]
name = "server_async_test"
path = "src/server_async_test.rs"

[dependencies.async-std]
version = "1.9"
features = ["attributes"]

[dependencies]
futures = "0.3"